# agentic-dev-env

./: .gitignore  AGENTS.md  QUICK_REFERENCE.md  README.md  TEMPLATE_GUIDE.md  build.py  build.sh  build_config.yaml  pyproject.toml
prompt_templates/agents/: code-reviewer.md  debug.agent.md  high-lvl-plan.agent.md
prompt_templates/prompts/: code-review-diff.prompt.md  code-review.prompt.md  create-detailed-specification.prompt.md  create-specification.prompt.md  create-unittest-python.prompt.md  format-databricks-ntb.prompt.md  format-vscode-ntb.prompt.md  write-docstrings.prompt.md  write-documentation.prompt.md
prompt_templates/prompts/agents-md-files/: update-tech-stack.prompt.md
prompt_templates/skills/docstring-python/: SKILL.md  example-docstring.py  example_docstring.py
src/_templates/: _base.j2  debug.md  python_code_conventions.md  python_project_conventions copy.md  python_project_conventions.md  python_test.md
src/_templates/core/: _base.j2
src/_templates/docs/: docs_diataxis_style.md  docs_mkdocs_conventions.md  docs_structure_diataxis.md  docs_structure_per_module.md  python_docstring.md
src/_templates/notebook/: notebook_structure.md  notebook_syntax_databricks.md  notebook_syntax_vscode.md
src/_templates/python/: code_conventions.md
src/_templates/review/: _base_review.md  _code_review.md  static_checks.md
src/_templates/tools/: uv.md
src/base/agents/: code_reviewer.md  debugger.md  reviewer.md
src/base/prompts/: code-full-review.md  code-static-review.md  diff-full-review.md  format-dbx-notebook.md  format-vsc-notebook.md  (+3 more)
(+12 files in other folders)
