[project]
name = "agentic-dev-env"
version = "0.1.0"
description = "Build system for AI agent development environment configurations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = []
